Basics/network/GatewayAPI/39.ip-deny-list.yaml
# HTTP IP 拒绝列表
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: vvoo/demoapp:v1.0
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "20m"
              memory: "50Mi"

---
########## 创建安全策略 ##########
# 下面策略表示只允许特定 IP 访问
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip-deny-list
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: backend
  authorization:
    defaultAction: Allow
    rules:
      - name: deny-list
        action: Deny
        principal:
          clientCIDRs: 
            - 57.182.245.13/32
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  hostnames:
    - "eg-example.tluapitest.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: backend
        port: 80
      matches:
        - path:
            type: PathPrefix
            value: /


# 使用允许的 IP 访问 可以正常访问，使用拒绝的 IP 访问会被拒绝
#  curl -v --header "Host: eg-example.tluapitest.com" http://eg-example.tluapitest.com/
